class ApiConstants {
  static String baseUrl = 'http://10.0.2.2:8080';
  static String registerUrl = '/usuario/cadastro';
  static String login = '/usuario/login';
}
