class StringsConstants {
  static String buttonSignIn = 'Entrar';

  static String error = 'Erro';
  static String errorMessage = 'Ocorreu algum erro!';

  static String ok = 'Ok';

  static String allRight = 'Tudo certo';
  static String userCreated = 'Seu usuário foi criado!';
}
